Initial views auth

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "creativeorange/gravatar": "^1.0",
         "suin/php-rss-writer": "^1.6",
         "laravelcollective/html": "^5.5",
-        "uxweb/sweet-alert": "^1.4",
-        "caffeinated/shinobi": "^3.1"
+        "uxweb/sweet-alert": "^1.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
